# Lightway

./: .flake8  .gitignore  .gitmodules  00_basic_ISS_data_tutorial.ipynb  00_basic_tutorial_public_API.ipynb  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: aimm-tiled-image.yml
aimmdb/_tests/: test_eli.py
aimmdb/ingest/: README.md  README.rst  eli.py
aimmdb/postprocessing/: operations.py
deploy/local/: config.yml
deploy/spin/docker/tiled/: Dockerfile
lightway/: adapters.py  client.py  schemas.py  utils.py  validators.py
lightway/_data/: elements_and_edges.json
lightway/ingest/: README.rst  __init__.py  iss.py  validators.py
lightway/postprocessing/: operations.py  operators.py
lightway/schemas/: _xas_schemas_helpers.py  xas_schemas.py
